<resources>
    <string name="app_name">RPOS</string>
    <string name="client_fragment">Hello blank client fragment</string>
    <string name="employee_fragment">Hello blank employee fragment</string>
    <string name="position_fragment">Hello blank position fragment</string>
    <string name="product_fragment">Hello blank product fragment</string>
    <string name="storage_fragment">Hello blank storage fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="products">Products</string>
    <string name="position">Position</string>
    <string name="client">Client</string>
    <string name="employee">Employee</string>
    <string name="storage">Storage</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="count">Count</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
</resources>