<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/clientFragment">

    <fragment
        android:id="@+id/clientFragment"
        android:name="com.example.rpos.ClientFragment"
        android:label="@string/client"
        tools:layout="@layout/fragment_client" />
    <fragment
        android:id="@+id/employeeFragment"
        android:name="com.example.rpos.EmployeeFragment"
        android:label="@string/employee"
        tools:layout="@layout/fragment_employee" />
    <fragment
        android:id="@+id/positionFragment"
        android:name="com.example.rpos.PositionFragment"
        android:label="@string/position"
        tools:layout="@layout/fragment_position" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.rpos.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/storageFragment"
        android:name="com.example.rpos.StorageFragment"
        android:label="@string/storage"
        tools:layout="@layout/fragment_storage" />
</navigation>