<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    tools:context=".AddProductFragment">

    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/nameText"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"  />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/priceText"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"  />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:text="@string/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/countText"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"  />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:text="@string/storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/storageSpinner"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
    </TableRow>

    <TableRow>
        <Button android:id="@+id/addButton" android:text="@string/add"/>
    </TableRow>
</TableLayout>